--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,10 @@
     <h1>Personal Budget</h1>
     <h2>A personal-budget management app</h2>
   </header>
+
+  <!-- This is an A11y Change -->
+    <button aria-label="Learn more about budget management" onclick="location.href='/about.html'">Learn More</button>
+
   
 
     <main class="center" id="main">
