--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
     
             <article>
                 <h2>Chart</h2>
-                <p>
+                <p> The pie chart represents the distribution of your budget across different categories.
                   <canvas id="myChart" width="400" height="400" role="img" aria-label="Budget distribution pie chart showing various categories"></canvas>
                   <!-- This is an A11y Change -->
                   <div class="chart-description" aria-hidden="true">
